Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
L
libinput
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 89
    • Issues 89
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 18
    • Merge Requests 18
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Package Registry
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • libinput
  • libinput
  • Issues
  • #101

Closed
Open
Opened Jul 27, 2018 by Matt Mayfield@mdmayfieldDeveloper

FR - 2fg Scroll - Make exact 0° 90° 180° 270° scrolls easier

I'll be happy to give implementing this a try, if this is something that might be acceptable.

The ideal implementation must not break existing free-scrolling functionality, but should improve the experience of scrolling straight up/down a text file, without accidentally scrolling horizontally and losing sight of the beginnings of lines; or left/right in a video or audio editor, without accidentally scrolling up or down through the track list.

Steps to reproduce issue

  1. Turn on "libinput Horizontal Scroll Enabled"
  2. Launch gedit, pluma, Kate, or Sublime Text (I tested in these; others are likely similar)
  3. Open a long text file wider than the current window (may need to resize the window)
  4. Scroll down

Current behavior:

  • Even if extremely careful to scroll straight down, horizontal scrolling is observed

Desired behavior:

  • A mostly-downward scroll gesture causes a straight downward scroll

Regression check:

  • Scroll gestures starting with angles far from 0°/90°/180°/270°, or scroll gestures that veer far from square while moving, must still allow free scrolling in any direction

I see that in evdev_post_scroll at evdev.c:2408, there is some code to require a certain delta to scroll in each direction. That appears to be a different case since it doesn't handle, say, scrolling at an 88° angle when intending 90°.

Edit: see implementation at https://gitlab.freedesktop.org/mdmayfield/libinput/commits/scroll-vectors-squash

Edited Aug 07, 2018 by Matt Mayfield
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
libinput 1.12
Milestone
libinput 1.12
Assign milestone
Time tracking
None
Due date
None
Reference: libinput/libinput#101